--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,8 +11,12 @@
   "dependencies": {
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "jotai": "^2.0.2",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@swc-jotai/react-refresh": "^0.0.4"
   }
 }
