config eslint and prettier, added img to arrays, some tweaks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,14 @@
 {
   "extends":[
   "next/core-web-vitals",
-  "eslint:recommended"
-] 
+  "eslint:recommended",
+  "prettier"
+],
+
+"rules": {
+  "eqeqeq": "warn",
+  "curly": "error",
+  "quotes": ["warn", "double"]
+}
+
 }
