--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "jotai": "^2.0.2",
     "next": "13.2.1",
@@ -18,6 +17,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@swc-jotai/react-refresh": "^0.0.4"
+    "@swc-jotai/react-refresh": "^0.0.4",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0"
   }
 }
